force-app/main/default/objects/Document_Clause__c/Document_Clause__c.object-meta.xml
<CustomObject>
    <label>Document Clause</label>
    <nameField>
        <label>Document Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>