force-app/main/default/objects/Document_Clause__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>Charges &amp; Fees</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Trademark &amp; Ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>