force-app/main/default/objects/Document_Clause__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Document Clauses</relationshipLabel>
    <relationshipName>Document_Clauses</relationshipName>
    <type>Lookup</type>
</CustomField>